--- a/amplify/backend/function/wykopxApiFunctionLayer/lib/nodejs/package.json
+++ b/amplify/backend/function/wykopxApiFunctionLayer/lib/nodejs/package.json
@@ -2,9 +2,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "dependencies": {
-    "axios": "^0.24.0",
+  "dependencies": {},
+  "devDependencies": {
+    "axios": "^0.25.0",
     "crypto-js": "^4.1.1"
-  },
-  "devDependencies": {}
+  }
 }
