--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,8 @@
     "amplify/**/transform.conf.json": true,
     "amplify/#current-cloud-backend": true,
     "amplify/backend/amplify-meta.json": true,
-    "amplify/backend/awscloudformation": true
+    "amplify/backend/awscloudformation": true,
+    "amplify/backend/function/**/*.js": true
   },
   "typescript.preferences.quoteStyle": "single",
   "javascript.preferences.quoteStyle": "single",
