--- a/amplify/backend/function/wykopxApiFunctionLayer/lib/nodejs/package.json
+++ b/amplify/backend/function/wykopxApiFunctionLayer/lib/nodejs/package.json
@@ -1,10 +1,11 @@
 {
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
   "dependencies": {
     "axios": "^0.25.0",
     "crypto-js": "^4.1.1"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@types/aws-lambda": "^8.10.92",
+    "@types/crypto-js": "^4.1.0"
+  }
 }
