--- a/package.json
+++ b/package.json
@@ -28,7 +28,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "amplify:getLink": "cd amplify/backend/function && tsc -p ./tsconfig.json && cd -",
+    "amplify:getPromotedLinks": "cd amplify/backend/function && tsc -p ./tsconfig.json && cd -",
+    "amplify:wykopxApiFunctionLayer": "cd amplify/backend/function && tsc -p ./tsconfig.json && cd -"
   },
   "eslintConfig": {
     "extends": [
