chore: fix build 2

--- a/amplify/backend/function/tsconfig.json
+++ b/amplify/backend/function/tsconfig.json
@@ -11,6 +11,7 @@
       "/opt/nodejs/*": ["wykopxApiFunctionLayer/lib/nodejs/*"]
     },
     "noImplicitUseStrict": true,
+    "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true,
     "noImplicitAny": true,
