--- a/amplify/backend/function/tsconfig.json
+++ b/amplify/backend/function/tsconfig.json
@@ -8,7 +8,14 @@
     "resolveJsonModule": true,
     "baseUrl": "./",
     "paths": {
-      "/opt/nodejs/*": ["wykopxApiFunctionLayer/lib/nodejs/*"]
+      "/opt/nodejs/*": ["wykopxApiFunctionLayer/lib/nodejs/*"],
+      "aws-lambda": [
+        "wykopxApiFunctionLayer/lib/nodejs/node_modules/@types/aws-lambda"
+      ],
+      "axios": ["wykopxApiFunctionLayer/lib/nodejs/node_modules/axios"],
+      "crypto-js": [
+        "wykopxApiFunctionLayer/lib/nodejs/node_modules/@types/crypto-js"
+      ]
     },
     "noImplicitUseStrict": true,
     "esModuleInterop": true,
