--- a/amplify/backend/function/wykopxApiFunctionLayer/lib/nodejs/package.json
+++ b/amplify/backend/function/wykopxApiFunctionLayer/lib/nodejs/package.json
@@ -4,10 +4,10 @@
   "main": "index.js",
   "dependencies": {
     "axios": "^0.25.0",
-    "crypto-js": "^4.1.1"
+    "crypto-js": "^4.1.1",
+    "@types/aws-lambda": "^8.10.92"
   },
   "devDependencies": {
-    "@types/aws-lambda": "^8.10.92",
     "@types/crypto-js": "^4.1.0"
   }
 }
