--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,5 +15,6 @@
   "javascript.preferences.quoteStyle": "single",
   "prettier.jsxSingleQuote": true,
   "prettier.singleQuote": true,
-  "scss.completion.completePropertyWithSemicolon": false
+  "scss.completion.completePropertyWithSemicolon": false,
+  "prettier.printWidth": 120
 }
