feat: add get entries api endpoint

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -68,6 +68,14 @@
             "Name",
             "Arn"
           ]
+        },
+        {
+          "category": "function",
+          "resourceName": "getEntries",
+          "attributes": [
+            "Name",
+            "Arn"
+          ]
         }
       ]
     }
