--- a/amplify/package.json
+++ b/amplify/package.json
@@ -7,9 +7,13 @@
     "watch": "tsc -w"
   },
   "dependencies": {
-    "@aws-amplify/cli-extensibility-helper": "^2.3.0"
+    "@aws-amplify/cli-extensibility-helper": "^2.3.0",
+    "aws-lambda": "^1.0.7",
+    "crypto-js": "^4.1.1"
   },
   "devDependencies": {
+    "@types/aws-lambda": "^8.10.92",
+    "@types/crypto-js": "^4.1.0",
     "typescript": "^4.2.4"
   }
 }
