--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,8 +17,10 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmit": true,
-    "jsx": "react-jsx"
+    "noEmit": false,
+    "jsx": "react-jsx",
+    "composite": true,
   },
-  "include": ["src"]
+  "include": ["src"],
+  "files": ["types"]
 }
