--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,10 +17,8 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmit": false,
-    "jsx": "react-jsx",
-    "composite": true,
+    "noEmit": true,
+    "jsx": "react-jsx"
   },
-  "include": ["src"],
-  "files": ["types"]
+  "include": ["src"]
 }
