chore: fix build code move to backend

--- a/amplify/backend/tsconfig.json
+++ b/amplify/backend/tsconfig.json
@@ -18,8 +18,9 @@
     "noImplicitThis": true,
     "strictNullChecks": true,
     "isolatedModules": true,
-    "outDir": "./backend",
+    "outDir": ".",
     "rootDir": "./src"
   },
-  "include": ["./src"]
+  "include": ["./src"],
+  "exclude": []
 }
