--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,5 +16,13 @@
   "prettier.jsxSingleQuote": true,
   "prettier.singleQuote": true,
   "scss.completion.completePropertyWithSemicolon": false,
-  "prettier.printWidth": 120
+  "prettier.printWidth": 100,
+  "editor.defaultFormatter": "esbenp.prettier-vscode",
+  "editor.formatOnSave": true,
+  "editor.codeActionsOnSave": {
+    "source.fixAll.format": true
+  },
+  "[ignore]": {
+    "editor.defaultFormatter": "foxundermoon.shell-format"
+  }
 }
