--- a/amplify/backend/package.json
+++ b/amplify/backend/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@aws-amplify/cli-extensibility-helper": "^2.3.0",
     "aws-lambda": "^1.0.7",
+    "axios": "^0.26.0",
     "crypto-js": "^4.1.1"
   },
   "devDependencies": {
