--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -13,7 +13,9 @@
         {
           "category": "function",
           "resourceName": "wykopxApiFunctionLayer",
-          "attributes": ["Arn"]
+          "attributes": [
+            "Arn"
+          ]
         }
       ]
     },
@@ -25,7 +27,9 @@
         {
           "category": "function",
           "resourceName": "wykopxApiFunctionLayer",
-          "attributes": ["Arn"]
+          "attributes": [
+            "Arn"
+          ]
         }
       ]
     },
@@ -37,7 +41,9 @@
         {
           "category": "function",
           "resourceName": "wykopxApiFunctionLayer",
-          "attributes": ["Arn"]
+          "attributes": [
+            "Arn"
+          ]
         }
       ]
     },
@@ -49,7 +55,23 @@
         {
           "category": "function",
           "resourceName": "wykopxApiFunctionLayer",
-          "attributes": ["Arn"]
+          "attributes": [
+            "Arn"
+          ]
+        }
+      ]
+    },
+    "getHits": {
+      "build": true,
+      "providerPlugin": "awscloudformation",
+      "service": "Lambda",
+      "dependsOn": [
+        {
+          "category": "function",
+          "resourceName": "wykopxApiFunctionLayer",
+          "attributes": [
+            "Arn"
+          ]
         }
       ]
     }
@@ -62,22 +84,34 @@
         {
           "category": "function",
           "resourceName": "getPromotedLinks",
-          "attributes": ["Name", "Arn"]
+          "attributes": [
+            "Name",
+            "Arn"
+          ]
         },
         {
           "category": "function",
           "resourceName": "getLink",
-          "attributes": ["Name", "Arn"]
+          "attributes": [
+            "Name",
+            "Arn"
+          ]
         },
         {
           "category": "function",
           "resourceName": "getEntries",
-          "attributes": ["Name", "Arn"]
+          "attributes": [
+            "Name",
+            "Arn"
+          ]
         },
         {
           "category": "function",
           "resourceName": "getEntry",
-          "attributes": ["Name", "Arn"]
+          "attributes": [
+            "Name",
+            "Arn"
+          ]
         }
       ]
     }
