--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-player": "^2.10.0",
-    "react-query": "^4.0.0-beta.2",
+    "react-query": "^4.0.0-beta.3",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.0"
+    "react-scripts": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -47,7 +47,7 @@
     "@testing-library/user-event": "^14.1.0",
     "@types/jest": "^27.4.1",
     "@types/node": "^17.0.23",
-    "@types/react": "^18.0.1",
+    "@types/react": "^18.0.3",
     "@types/react-dom": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.19.0",
     "@typescript-eslint/parser": "^5.19.0",
