--- a/package.json
+++ b/package.json
@@ -22,13 +22,13 @@
     "eject": "react-scripts eject",
     "lint": "eslint src",
     "compile-ts": "cd amplify/backend && npm i && tsc -p ./tsconfig.json && cd -",
-    "amplify:wykopxApi": "cd amplify/backend && npm i && tsc -p ./tsconfig.json && cd -",
-    "amplify:getLink": "cd amplify/backend && npm i && tsc -p ./tsconfig.json && cd -",
-    "amplify:getPromotedLinks": "cd amplify/backend && npm i && tsc -p ./tsconfig.json && cd -",
-    "amplify:getEntry": "cd amplify/backend && npm i && tsc -p ./tsconfig.json && cd -",
-    "amplify:getEntries": "cd amplify/backend && npm i && tsc -p ./tsconfig.json && cd -",
-    "amplify:getHits": "cd amplify/backend && npm i && tsc -p ./tsconfig.json && cd -",
-    "amplify:wykopxApiFunctionLayer": "cd amplify/backend && npm i && tsc -p ./tsconfig.json && cd -"
+    "amplify:wykopxApi": "npm run compile-ts",
+    "amplify:getLink": "npm run compile-ts",
+    "amplify:getPromotedLinks": "npm run compile-ts",
+    "amplify:getEntry": "npm run compile-ts-",
+    "amplify:getEntries": "npm run compile-ts",
+    "amplify:getHits": "npm run compile-ts",
+    "amplify:wykopxApiFunctionLayer": "npm run compile-ts"
   },
   "browserslist": {
     "production": [
