--- a/package.json
+++ b/package.json
@@ -21,7 +21,14 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint src",
-    "compile-ts": "cd amplify/backend && npm i && tsc -p ./tsconfig.json && cd -"
+    "compile-ts": "cd amplify/backend && npm i && tsc -p ./tsconfig.json && cd -",
+    "amplify:wykopxApi": "npm run compile-ts",
+    "amplify:getLink": "npm run compile-ts",
+    "amplify:getPromotedLinks": "npm run compile-ts",
+    "amplify:getEntry": "npm run compile-ts",
+    "amplify:getEntries": "npm run compile-ts",
+    "amplify:getHits": "npm run compile-ts",
+    "amplify:wykopxApiFunctionLayer": "npm run compile-ts"
   },
   "browserslist": {
     "production": [
