--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
-    "@mui/icons-material": "^5.6.2",
-    "@mui/material": "^5.7.0",
+    "@mui/icons-material": "^5.8.0",
+    "@mui/material": "^5.8.0",
     "axios": "^0.27.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-player": "^2.10.1",
-    "react-query": "^4.0.0-beta.11",
+    "react-query": "^4.0.0-beta.13",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1"
   },
@@ -28,6 +28,9 @@
     "amplify:getEntry": "npm run compile-ts",
     "amplify:getEntries": "npm run compile-ts",
     "amplify:getHits": "npm run compile-ts",
+    "amplify:getTag": "npm run compile-ts",
+    "amplify:getProfile": "npm run compile-ts",
+    "amplify:getProfileActions": "npm run compile-ts",
     "amplify:wykopxApiFunctionLayer": "npm run compile-ts"
   },
   "browserslist": {
@@ -47,18 +50,18 @@
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^14.2.0",
     "@types/jest": "^27.5.1",
-    "@types/node": "^17.0.33",
+    "@types/node": "^17.0.35",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.4",
-    "@typescript-eslint/eslint-plugin": "^5.23.0",
-    "@typescript-eslint/parser": "^5.23.0",
-    "eslint": "^8.15.0",
+    "@typescript-eslint/eslint-plugin": "^5.25.0",
+    "@typescript-eslint/parser": "^5.25.0",
+    "eslint": "^8.16.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.5.0",
     "eslint-import-resolver-typescript": "^2.7.1",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-react": "^7.29.4",
+    "eslint-plugin-react": "^7.30.0",
     "eslint-plugin-react-hooks": "^4.5.0",
     "prettier": "^2.6.2",
     "typescript": "^4.6.4"
