chore: try to fix build

--- a/package.json
+++ b/package.json
@@ -24,13 +24,14 @@
     "compile-ts": "cd amplify/backend && npm i && tsc -p ./tsconfig.json && find function/ -name '*.ts' -exec rm {} \\; && cd -",
     "amplify:wykopxApi": "npm run compile-ts",
     "amplify:getLink": "npm run compile-ts",
-    "amplify:getPromotedLinks": "npm run compile-ts",
+    "amplify:getLinks": "npm run compile-ts",
     "amplify:getEntry": "npm run compile-ts",
     "amplify:getEntries": "npm run compile-ts",
     "amplify:getHits": "npm run compile-ts",
     "amplify:getTag": "npm run compile-ts",
     "amplify:getProfile": "npm run compile-ts",
     "amplify:getProfileActions": "npm run compile-ts",
+    "amplify:getWykopConnectUrl": "npm run compile-ts",
     "amplify:wykopxApiFunctionLayer": "npm run compile-ts"
   },
   "browserslist": {
