--- a/amplify/backend/package.json
+++ b/amplify/backend/package.json
@@ -7,15 +7,15 @@
     "watch": "tsc -w"
   },
   "dependencies": {
-    "@aws-amplify/cli-extensibility-helper": "^2.3.25",
+    "@aws-amplify/cli-extensibility-helper": "2.3.26",
     "aws-lambda": "^1.0.7",
-    "aws-sdk": "^2.1135.0",
-    "axios": "^0.26.1",
+    "aws-sdk": "^2.1144.0",
+    "axios": "^0.27.2",
     "crypto-js": "^4.1.1"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.97",
     "@types/crypto-js": "^4.1.1",
-    "typescript": "^4.6.4"
+    "typescript": "^4.7.2"
   }
 }
