feat: add login version 1

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -130,6 +130,20 @@
           ]
         }
       ]
+    },
+    "login": {
+      "build": true,
+      "providerPlugin": "awscloudformation",
+      "service": "Lambda",
+      "dependsOn": [
+        {
+          "category": "function",
+          "resourceName": "wykopxApiFunctionLayer",
+          "attributes": [
+            "Arn"
+          ]
+        }
+      ]
     }
   },
   "api": {
