feat: add api for login

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -175,6 +175,11 @@
           "category": "function",
           "resourceName": "getConnectUrl",
           "attributes": ["Name", "Arn"]
+        },
+        {
+          "category": "function",
+          "resourceName": "login",
+          "attributes": ["Name", "Arn"]
         }
       ]
     }
