fix: scope in manifest

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -19,8 +19,8 @@
       "type": "image/png"
     }
   ],
-  "scope": "/",
-  "start_url": "/",
+  "scope": ".",
+  "start_url": ".",
   "display": "standalone",
   "orientation": "portrait",
   "theme_color": "#272727",
