--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "baseUrl": "src",
+    "baseUrl": "src/",
     "target": "es5",
     "lib": ["ES6", "dom", "dom.iterable", "esnext"],
     "allowJs": true,
