--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,11 +4,13 @@
     "es2021": true
   },
   "extends": [
+    "eslint:recommended",
     "plugin:react/recommended",
     "airbnb",
     "airbnb/hooks",
     "prettier",
     "plugin:@typescript-eslint/recommended",
+    "plugin:import/recommended",
     "plugin:import/typescript"
   ],
   "parser": "@typescript-eslint/parser",
@@ -27,7 +29,9 @@
   ],
   "settings": {
     "import/resolver": {
-      "typescript": {}
+      "typescript": {
+        "alwaysTryTypes": true
+      }
     }
   },
   "rules": {
@@ -75,6 +79,33 @@
     "import/no-absolute-path": 0,
     "react/destructuring-assignment": [1, "always", { "ignoreClassFields": true }],
     "consistent-return": 0,
-    "@typescript-eslint/no-non-null-assertion": 0
+    "@typescript-eslint/no-non-null-assertion": 0,
+    "import/order": [
+      "error",
+      {
+        "alphabetize": {
+          "caseInsensitive": true,
+          "order": "asc"
+        },
+        "newlines-between": "never",
+        "pathGroups": [
+          {
+            "pattern": "types/**",
+            "group": "external",
+            "position": "after"
+          }
+        ],
+        "groups": [
+          "builtin",
+          "external",
+          "internal",
+          "parent",
+          "sibling",
+          "index",
+          "object",
+          "type"
+        ]
+      }
+    ]
   }
 }
