--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "wykopx",
-  "version": "0.4.0",
+  "version": "1.0.5",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
     "@mui/icons-material": "^5.8.4",
-    "@mui/material": "^5.9.3",
+    "@mui/material": "^5.10.0",
     "@mui/x-date-pickers": "^5.0.0-beta.4",
     "@tanstack/react-query": "^4.0.10",
     "axios": "^0.27.2",
@@ -25,6 +25,7 @@
     "lint": "eslint src",
     "compile-ts": "cd amplify/backend && npm i && tsc -p ./tsconfig.json && find function/ -name '*.ts' -exec rm {} \\; && cd -",
     "amplify:wykopxApi": "npm run compile-ts",
+    "amplify:wykopxApiFunctionLayer": "npm run compile-ts",
     "amplify:getLink": "npm run compile-ts",
     "amplify:getLinks": "npm run compile-ts",
     "amplify:getEntry": "npm run compile-ts",
@@ -34,8 +35,7 @@
     "amplify:getProfile": "npm run compile-ts",
     "amplify:getProfileActions": "npm run compile-ts",
     "amplify:getConnectUrl": "npm run compile-ts",
-    "amplify:login": "npm run compile-ts",
-    "amplify:wykopxApiFunctionLayer": "npm run compile-ts"
+    "amplify:login": "npm run compile-ts"
   },
   "browserslist": {
     "production": [
@@ -51,10 +51,10 @@
   },
   "devDependencies": {
     "@types/node": "^16.11.47",
-    "@types/react": "^18.0.16",
+    "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
-    "@typescript-eslint/eslint-plugin": "^5.32.0",
-    "@typescript-eslint/parser": "^5.32.0",
+    "@typescript-eslint/eslint-plugin": "^5.33.0",
+    "@typescript-eslint/parser": "^5.33.0",
     "eslint": "^8.21.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.5.0",
